--- a/front/my-todo/package.json
+++ b/front/my-todo/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "immer": "^9.0.5",
     "moment": "^2.29.1",
@@ -19,6 +20,7 @@
     "redux": "^4.1.0",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
@@ -45,5 +47,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://127.0.0.1:8000/"
 }
